Fix font-family import and alignment in index.css

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 body {
   margin: 0;
-  font-family: "Outfit", sans-serif;
+  font-family: "Outfit", sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
